# pairwise-ranking

./: .gitignore  LICENSE  README.md  example.ipynb  example.py  pyproject.toml  tennis.csv
data/adj_matrices/: baboons.txt  basketball.txt  business_depts.txt  chess.txt  college_football_D1_2023.txt  cs_depts.txt  cs_faculty.txt  dogs.txt  friends.txt  history_depts.txt  history_faculty.txt  hyenas.txt  mice.txt  monkeys.txt  scrabble.txt  sparrows.txt  tennis.txt  video_games.txt
data/gml_files/: baboons.gml  basketball.gml  business_depts.gml  chess.gml  college_football_D1_2023.gml  cs_depts.gml  dogs.gml  friends.gml  history_depts.gml  hyenas.gml  mice.gml  monkeys.gml  scrabble.gml  soccer.gml  sparrows.gml  tennis.gml  video_games.gml
data/match_lists/: basketball.txt  business_depts.txt  college_football_D1_2023.txt  cs_depts.txt  friends.txt  history_depts.txt  mice.txt  monkeys.txt  scrabble.txt  soccer.txt  tennis.txt  video_games.txt
data/matches/: baboons.txt  basketball.txt  chess.txt  cs_faculty.txt  dogs.txt  history_faculty.txt  hyenas.txt  soccer.txt  sparrows.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  data.rst  index.rst  models.rst  usage.rst
src/pairwise-ranking/: sampling.py  util.py
src/ranking/: __init__.py  _core.py  fast_iteration.py  parsing.py  results.py  sampling.py  util.py
tests/: test_parsing.py  test_results.py  test_util.py
tests/test_case_files/: adj_matrix_1.txt  depthAndLuckEP_1.txt  depthAndLuckEs_1.txt  depthOnlyEP_1.txt  depthOnlyEs_1.txt  logisticPriorEP_1.txt  logisticPriorEs_1.txt  (+5 more)
